@@ -3,14 +3,14 @@
           xsi:noNamespaceSchemaLocation="http://www.vrjuggler.org/tweek/xsd/1.1/beanlist.xsd"
           title="Choose a category">
    <category label="Display" title="Choose a display" icon="org/vrjuggler/vrjconfig/images/display64.png">
-      <wizard label="Test wizard" wizard_location="${VJ_BASE_DIR}/bin/ClusterWizard.jar" icon="org/vrjuggler/vrjconfig/images/simulator64.png" />
+      <wizard label="Test wizard" wizard_location="${VJ_BASE_DIR}/share/vrjuggler/java/ClusterWizard.jar" icon="org/vrjuggler/vrjconfig/images/simulator64.png" />
       <type label="Display Window" title="Choose a display window" token="display_window" icon="org/vrjuggler/vrjconfig/images/display64.png"/>
    </category>
    <editor label="Simulator" class="" icon="org/vrjuggler/vrjconfig/images/simulator64.png" />
    <!--<editor label="Cluster" class="" icon="org/vrjuggler/vrjconfig/images/cluster64.png" />-->
-   <wizard label="Cluster Wizard" wizard_location="${VJ_BASE_DIR}/bin/ClusterWizard.jar" icon="org/vrjuggler/vrjconfig/images/new_cluster_wizard64.png" />
+   <wizard label="Cluster Wizard" wizard_location="${VJ_BASE_DIR}/share/vrjuggler/java/ClusterWizard.jar" icon="org/vrjuggler/vrjconfig/images/new_cluster_wizard64.png" />
    <category label="Devices" title="Choose a device" icon="org/vrjuggler/vrjconfig/images/devices64.png">
-      <wizard label="Add Device Wizard" wizard_location="${VJ_BASE_DIR}/bin/NewDevice.jar" icon="org/vrjuggler/vrjconfig/images/new_device_wizard64.png" />
+      <wizard label="Add Device Wizard" wizard_location="${VJ_BASE_DIR}/share/vrjuggler/java/NewDevice.jar" icon="org/vrjuggler/vrjconfig/images/new_device_wizard64.png" />
       <type label="Analog" title="Choose an analog device" token="analog_device" icon="org/vrjuggler/vrjconfig/images/analog_devices64.png"/>
       <type label="Digital" title="Choose a digital device" token="digital_device" icon="org/vrjuggler/vrjconfig/images/digital_devices64.png"/>
       <type label="Positional" title="Choose a position device" token="positional_device" icon="org/vrjuggler/vrjconfig/images/positional_devices64.png"/>
