@@ -27,20 +27,17 @@
 # Date modified: $Date$
 # Version:       $Revision$
 # -----------------------------------------------------------------
-#
 # *************** <auto-copyright.pl END do not edit this line> ***************
 
-# This file defines the specification for the base installation directory
-# tree for VR Juggler.
-#
-# $Id$
+# This file defines the specification for the java directory tree for the
+# VR Juggler installation.
 
 /set type=dir mode=@DIR_PERMS@ uname=@OWNER_NAME@ gname=@GROUP_NAME@
 .
-    bin
+    beans
+        customeditors
+        ..
     ..
-    include
-    ..
-    share
+    java
     ..
 ..
