@@ -2,7 +2,7 @@
 <beanlist xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
           xsi:noNamespaceSchemaLocation="http://www.vrjuggler.org/tweek/xsd/1.1/beanlist.xsd">
    <service name="PinchGloveEditor">
-      <file name="${VJ_BASE_DIR}/lib/vrjuggler/customeditors/PinchGloveEditor.jar"
+      <file name="${VJ_BASE_DIR}/share/vrjuggler/beans/customeditors/PinchGloveEditor.jar"
             class="org.vrjuggler.vrjconfig.customeditors.pinchglove.PinchGlovePanel"/>
       <dependencies>
          <bean>ConfigBroker</bean>
