@@ -2,13 +2,13 @@
 <beanlist xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
           xsi:noNamespaceSchemaLocation="http://www.vrjuggler.org/tweek/xsd/1.1/beanlist.xsd">
    <generic name="ProxyEditor">
-      <file name="${VJ_BASE_DIR}/lib/vrjuggler/customeditors/ProxyEditor.jar"
+      <file name="${VJ_BASE_DIR}/share/vrjuggler/beans/customeditors/ProxyEditor.jar"
             class="org.vrjuggler.vrjconfig.customeditors.proxyeditor.Editor"/>
       <dependencies>
          <bean>ConfigBroker</bean>
          <jar path="${JCCL_BASE_DIR}/share/java/beans">jccl_editors.jar</jar>
          <jar path="${TWEEK_BASE_DIR}/share/tweek/java">ui.jar</jar>
-         <jar path="${TWEEK_BASE_DIR}/bin">jgraphpad.jar</jar>
+         <jar path="${VJ_BASE_DIR}/sharae/vrjuggler/java">jgraphpad.jar</jar>
       </dependencies>
    </generic>
 </beanlist>
